@@ -2,6 +2,9 @@ update-manager (1:0.126.7) UNRELEASED; urgency=low
 
   * po/*.po:
     - update translations from LP (LP: #460547)
+  * UpdateManager/Core/DistUpgradeFetcherCore.py:
+    - check if running on a system with noexec /tmp and give a propper
+      error message (LP: #461744)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Oct 2009 15:56:00 +0100
 
